# GPGL

./: .clang-tidy  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: color.h  input.h  rectangle.h  shader.h  shape.h  texture.h  triangle.h  window.h
shaders/: fragShader.glsl  testFrag.glsl
src/: input.cpp  main.cpp  rectangle.cpp  shader.cpp  shape.cpp  texture.cpp  triangle.cpp  window.cpp
